[package]
name = "pie-cli"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pie-lib = { path = "../lib" }
async-std = { version = "1", features = ["attributes"] }
clap = "3.0.0-beta.5"
surf = "2.3.2"
lazy_static = "1.4.0"
toml = "0.5.8"
directories = "4.0.1"
