[package]
name = "pie-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
git2 = "0.13.23"
octocrab = "0.12.0"
async-std = {version="1.10.0", features=["attributes"]}
serde = "1.0.130"
driftwood = "0.0.6"
dirs = "4.0.0"
