[package]
name = "pie-server"
version = "0.1.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pie-lib = { path = "../lib" }
async-std = { version = "1", features = ["attributes"] }
directories = "4.0.1"
driftwood = "0.0.6"
git2 = "0.13.23"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tide = "0.16.0"
toml = "0.5.8"
log = "0.4.14"
pretty_env_logger = "0.4.0"
surf = "2.3.2"
which = "4.2.2"

[features]
